# cliffdemo

./: README.md  requirements.txt  setup.cfg  setup.py
cliffdemo/: main.py
cliffdemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cliffdemo/cmd/: simple.py
cliffdemo/files/v1/: list.py
