[metadata]
name = cliffdemo
description = cliffdemo CLI client
author = Robin Černín
author_email = cerninr@gmail.com
keywords = cliffdemo
version = 0.0.2

[options.entry_points]
console_scripts =
    cliffdemo = cliffdemo.main:main

cliff.demo =
    simple = cliffdemo.cmd.simple:Simple
    file = cliffdemo.files.v1.show:ShowFile
    files = cliffdemo.files.v1.list:ListFiles

[files]
packages = cliffdemo
